--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,21 @@
 [package]
+edition = "2021"
 name = "zero2prod"
 version = "0.1.0"
-edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+# Notice the double square brackets: it's an array in TOML's syntax.
+# We can only have one library in a project, but we can have multiple binaries!
+# If you want to manage multiple libraries in the same repository
+[[bin]]
+name = "zero2prod"
+path = "src/main.rs"
 
 [dependencies]
+actix-web = "4"
+tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
+
+[dev-dependencies]
+reqwest = "0.11"
