sqlx connect postgres

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+#! Cargo.toml
 [package]
 edition = "2021"
 name = "zero2prod"
@@ -15,6 +16,7 @@ path = "src/main.rs"
 
 [dependencies]
 actix-web = "4"
+config = "0.13"
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
