sqlx postgres CI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/main.rs"
 
 [dependencies]
 actix-web = "4"
-config = "0.13"
+config = {version = "0.13", default-features = false, features = ["yaml"]}
 tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 # We need the optional `derive` feature to use `serde`'s procedural macros:
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
