--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,9 @@ tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 # `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
 # The feature is not enabled by default to avoid pulling in
 # unnecessary dependencies for projects that do not need it.
+chrono = "0.4"
 serde = {version = "1", features = ["derive"]}
+uuid = {version = "0.8", features = ["v4"]}
 
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
