--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,10 @@ tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 # The feature is not enabled by default to avoid pulling in
 # unnecessary dependencies for projects that do not need it.
 chrono = "0.4"
+env_logger = "0.9"
+log = "0.4"
 serde = {version = "1", features = ["derive"]}
+tracing = {version = "0.1", features = ["log"]}
 uuid = {version = "0.8", features = ["v4"]}
 
 # Using table-like toml syntax to avoid a super-long line!
